Bug 516740. Never simplify the visible region by increasing its area when we're subtracting opaque areas from the visible region. Instead, just don't subtract the opaque area if it would make the visible region too complex. r=bzbarsky